Changed Internal css

--- a/index.htm
+++ b/index.htm
@@ -6,30 +6,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" type="text/css" href="ref/customCSS/styles.css">
+ 
   <link rel="stylesheet" href="ref/builtinCSS/css/bootstrap.min.css">
   
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+ <link rel="stylesheet" type="text/css" href="ref/customCSS/styles.css">
   <!--  <link rel="stylesheet" href="ref/css/bootstrap.min.css"> -->
 
 
  <!--     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
-  <title>Order Cakes</title>
-  <style >
-
-    @media only screen and (max-width: 768px) {
-      h1{
-        font-size:2px;
-      }
-    }
-
-  </style>
-
+  <title>Adventure Courses</title>
 
 </head>
 
@@ -47,8 +37,8 @@
         <span class="icon-bar"></span> 
       </button>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav" style="display: inline;">
+    <div class="collapse navbar-collapse">
+      <ul class="nav navbar-nav" id="navBar" style="display: inline;">
         <li class="active"><a href="#messi">Adventures123</a></li>
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About Us</a></li> 
@@ -74,21 +64,21 @@
       <!-- Wrapper for slides -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="images/carouselImage1.jpg" alt="Los Angeles" style="width:100%;">
+          <img src="images/carouselImage1.jpg" alt="Los Angeles" class="w-100">
           <div class="carousel-caption text-info" >
             <h3 >I feel very adventurous</h3>
           </div>
         </div>
 
         <div class="item">
-          <img src="images/carouselImage2.jpg" alt="Chicago" style="width:100%;">
+          <img src="images/carouselImage2.jpg" alt="Chicago" class="w-100">
           <div class="carousel-caption text-info" >
            <h3>Come on.... Lets Enjoyyy</h3>
          </div>
        </div>
 
-       <div class="item">
-        <img src="images/carouselImage3.jpg" alt="New york" style="width:100%;">
+       <div class="item ">
+        <img src="images/carouselImage3.jpg" alt="New york" class="w-100">
       </div>
     </div>
 
@@ -160,10 +150,10 @@
 
 
 
-<div id="contact" class="jumbotron jumbotron bg-light" style="padding: 10px;margin-bottom: 0px;">
-  <h1>AdventureClub123.com</h1> 
-  <p>Copyright © 2004-2018 Website.com Solutions Inc. All Rights Reserved. All other trademarks and copyrights are the property of their respective holders.</p> 
-  <p>dineshverma3008@gmail.com</p>
+<div id="contact" class="jumbotron jumbotron bg-light" >
+  <h1 id="headingAtBottom">AdventureClub123.com</h1> 
+  <p class="contentBottom">Copyright © 2004-2018 Website.com Solutions Inc. All Rights Reserved. All other trademarks and copyrights are the property of their respective holders.</p> 
+  <p class="contentBottom">dineshverma3008@gmail.com</p>
 </div>
 
 
